# team-worksonourmachines

./: .dockerignore  .env.dist  .gitignore  Makefile  README.md  _typos.toml  docker-compose.azure.yml  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.tooling.yml  docker-compose.yml  tutormatch-realm.json  worksonourmachine.code-workspace
.github/: CODEOWNERS
.github/workflows/: build-push.yml  ci.yml  code-quality.yml
api/: Dockerfile  README.md  main.tsp  package.json  pnpm-lock.yaml  server-courses-spec.yml  tspconfig.yaml
api/docker/: Dockerfile
api/services/: ai.tsp  communication.tsp  courses.tsp  marketplace.tsp  module2.tsp  module3.tsp  student-internal.tsp  student.tsp
api/shared/: errors.tsp  pagination.tsp  security.tsp  study-focus.tsp
api/specs/: openapi.AI.v1.yaml  openapi.Ai.v1.yaml  openapi.Communication.v1.yaml  openapi.Courses.v1.yaml  openapi.Marketplace.v1.yaml  openapi.Module2.v1.yaml  openapi.Module2.yaml  openapi.Module3.v1.yaml  openapi.Student.v1.yaml  (+1 more)
artifacts/ai/: Dockerfile  README.md  pyproject.toml  requirements.txt
artifacts/ai/app/: ai_impl.py  auth.py  clients.py  llm.py  main.py  prompt.py  token_exchange.py
artifacts/ai/docker/: Dockerfile  tooling-entrypoint.sh
artifacts/ai/tests/: test_llm.py  test_plan.py
artifacts/server/: pom.xml
docker/: ai.Dockerfile  client-web.Dockerfile
docs/: initial-backlog.md  problem-statement.md  projectbrief.md  system-overview.md
infrastructure/: Makefile  Makefile.local
k8s/: ai.yml  client-web.yml  namespace.yml  ollama.yml  secrets.yml.example
(+359 files in other folders)
