[project]
name = "tutormatch-ai"
version = "0.0.1"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
verbosity_assertions = 2
pythonpath = [".", "generated/src"]
asyncio_mode = "auto"

[tool.ruff]
exclude = ["generated/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
